# wevy

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
assets/json/: Map.json
pyxel/: Map.pyxel  Small-Map-Old.pyxel  Small-Map.pyxel
src/: crafting.rs  game_object.rs  game_tile.rs  main.rs  multi_vec.rs  object_interaction.rs  player.rs  progress.rs  tile_world.rs  wave_function_collapse_generator.rs
