[package]
name = "wevy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
cheat = []
inspect = ["dep:bevy-inspector-egui"]
wave_function = []

[dependencies]
bevy = { version = "0.12.1" }
bevy-inspector-egui = { version = "0.22.1", optional = true }
bevy_common_assets = { version = "0.8.0", features = ["json"] }
bevy_egui = "0.24.0"
bit-set = "0.5.3"
bitset = "0.1.2"
derive_more = "0.99.17"
enum-iterator = "1.4.1"
rand = "0.8.5"
serde = "1.0.194"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

